--- a/index.css
+++ b/index.css
@@ -875,6 +875,35 @@ span.flatpickr-day.selected {
 .flatpickr-calendar .flatpickr-days .dayContainer .flatpickr-day.flatpickr-disabled {
   color: #b8c2cc; }
 
+/*** Account Settings ***/
+.account-settings {
+  width: 500px;
+  position: absolute;
+  right: 0px;
+  display: none;
+  translate: display 0.3s;
+  background-color: #fff; }
+  .account-settings.show-setting {
+    display: block; }
+  .account-settings .setting-header {
+    background-color: #7367f0;
+    color: white;
+    height: 30px;
+    padding: 1rem; }
+  .account-settings .setting-group {
+    background-color: gray;
+    color: white;
+    height: 30px;
+    padding: 1rem; }
+    .account-settings .setting-group .setting-item {
+      cursor: pointer; }
+  .account-settings .account-name {
+    text-transform: uppercase; }
+
+@media (max-width: 600px) {
+  .account-settings {
+    width: 100%; } }
+
 /**
  * prism.js tomorrow night eighties for JavaScript, CoffeeScript, CSS and HTML
  * Based on https://github.com/chriskempson/tomorrow-theme
@@ -22250,7 +22279,11 @@ input:focus ~ .bg-danger {
   background: rgba(100, 0, 100, 0.6); }
 
 @font-face {
-  font-family: "feather"; }
+  font-family: "feather";
+  src: url("./fonts/feather.eot?t=1501834582692");
+  /* IE9*/
+  src: url("./fonts/feather.eot?t=1501834582692#iefix") format("embedded-opentype"), url("./fonts/feather.woff?t=1501834582692") format("woff"), url("./fonts/feather.ttf?t=1501834582692") format("truetype"), url("./fonts/feather.svg?t=1501834582692#feather") format("svg");
+  /* iOS 4.1- */ }
 
 .feather {
   /* use !important to prevent issues with browser extensions that change fonts */
