--- a/index.css
+++ b/index.css
@@ -12046,30 +12046,45 @@ input[type="month"].form-control {
 /*========================================================
         DARK LAYOUT
 =========================================================*/
-.rdt_Wrapper header {
-  display: block;
-  padding-left: 0;
-  padding-right: 0; }
+/***** React Table ******/
+.ReactTable .rt-thead.-header {
+  box-shadow: none; }
 
-.rdt_Wrapper .dataTable-custom .rdt_Table .rdt_TableBody .rdt_TableRow {
-  min-height: 50px; }
+.ReactTable .rt-thead .rt-th {
+  box-shadow: none;
+  background-color: #fff; }
 
-.rdt_Pagination #pagination-first-page,
-.rdt_Pagination #pagination-previous-page,
-.rdt_Pagination #pagination-next-page,
-.rdt_Pagination #pagination-last-page {
-  background: #f0f0f0;
-  border-radius: 50%; }
-  .rdt_Pagination #pagination-first-page[disabled] svg,
-  .rdt_Pagination #pagination-previous-page[disabled] svg,
-  .rdt_Pagination #pagination-next-page[disabled] svg,
-  .rdt_Pagination #pagination-last-page[disabled] svg {
-    fill: rgba(98, 98, 98, 0.5); }
-  .rdt_Pagination #pagination-first-page:not(:last-of-type),
-  .rdt_Pagination #pagination-previous-page:not(:last-of-type),
-  .rdt_Pagination #pagination-next-page:not(:last-of-type),
-  .rdt_Pagination #pagination-last-page:not(:last-of-type) {
-    margin-right: 0.5rem; }
+.ReactTable .rt-tbody {
+  text-align: center; }
+
+.ReactTable .pagination-bottom .-pagination {
+  box-shadow: none;
+  border-top-width: 1px; }
+  .ReactTable .pagination-bottom .-pagination .-btn {
+    background-color: #338955;
+    color: #fff; }
+    .ReactTable .pagination-bottom .-pagination .-btn:not([disabled]):hover {
+      background-color: #2c7649; }
+
+.ReactTable.nested-table .rt-tbody .rt-tr-group .rt-td:first-child {
+  background-color: #f8f8f8 !important; }
+
+@media (max-width: 769px) {
+  .ReactTable .pagination-bottom .-pagination .-previous,
+  .ReactTable .pagination-bottom .-pagination .-center,
+  .ReactTable .pagination-bottom .-pagination .-next {
+    flex: unset !important; }
+    .ReactTable .pagination-bottom .-pagination .-previous .-btn,
+    .ReactTable .pagination-bottom .-pagination .-center .-btn,
+    .ReactTable .pagination-bottom .-pagination .-next .-btn {
+      padding: 0.5rem 4rem; } }
+
+@media (max-width: 769px) {
+  .ReactTable .pagination-bottom .-pagination {
+    justify-content: center; }
+    .ReactTable .pagination-bottom .-pagination .-previous,
+    .ReactTable .pagination-bottom .-pagination .-next {
+      margin: 1rem 0; } }
 
 /*========================================================
         DARK LAYOUT
