Update code app base

--- a/index.css
+++ b/index.css
@@ -962,7 +962,7 @@ span.flatpickr-day.selected {
       margin-right: 5rem;
       padding-top: 1rem;
       color: white;
-      min-height: 85vh; }
+      min-height: 620px; }
       .landing-page .ld-main .lg-content-header {
         margin-top: 2rem; }
       .landing-page .ld-main .ld-header img {
