--- a/index.css
+++ b/index.css
@@ -1,3 +1,99 @@
+body.react-confirm-alert-body-element {
+  overflow: hidden;
+}
+
+.react-confirm-alert-blur {
+  filter: url(#gaussian-blur);
+  filter: blur(2px);
+  -webkit-filter: blur(2px);
+}
+
+.react-confirm-alert-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 99;
+  background: rgba(255, 255, 255, 0.9);
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  justify-content: center;
+  -ms-align-items: center;
+  align-items: center;
+  opacity: 0;
+  -webkit-animation: react-confirm-alert-fadeIn 0.5s 0.2s forwards;
+  animation: react-confirm-alert-fadeIn 0.5s 0.2s forwards;
+}
+
+.react-confirm-alert-body {
+  font-family: Arial, Helvetica, sans-serif;
+  width: 400px;
+  padding: 30px;
+  text-align: left;
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 20px 75px rgba(0, 0, 0, 0.13);
+  color: #666;
+}
+
+.react-confirm-alert-svg {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.react-confirm-alert-body > h1 {
+  margin-top: 0;
+}
+
+.react-confirm-alert-body > h3 {
+  margin: 0;
+  font-size: 16px;
+}
+
+.react-confirm-alert-button-group {
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  justify-content: flex-start;
+  margin-top: 20px;
+}
+
+.react-confirm-alert-button-group > button {
+  outline: none;
+  background: #333;
+  border: none;
+  display: inline-block;
+  padding: 6px 18px;
+  color: #eee;
+  margin-right: 10px;
+  border-radius: 5px;
+  font-size: 12px;
+  cursor: pointer;
+}
+
+@-webkit-keyframes react-confirm-alert-fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes react-confirm-alert-fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .flatpickr-calendar {
   background: transparent;
   opacity: 0;
@@ -872,7 +968,8 @@ span.flatpickr-day.selected {
   width: 90%; }
 
 .landing-page {
-  background-size: cover; }
+  background-size: cover;
+  height: 100%; }
   .landing-page .mobile-bg {
     width: 100%;
     max-height: 100%; }
@@ -880,8 +977,7 @@ span.flatpickr-day.selected {
     margin-right: 10rem;
     padding-top: 5rem;
     color: white;
-    height: 90%;
-    min-height: 85vh; }
+    min-height: 90vh; }
     .landing-page .ld-main .lg-content-header {
       margin-top: 2rem; }
       .landing-page .ld-main .lg-content-header .tab-control {
@@ -23558,6 +23654,9 @@ html[dir="rtl"] body .ps__rail-y {
   html[dir="rtl"] .app-content .header-navbar .dropdown.dropdown-language .dropdown-menu {
     transform: translate3d(26px, 64px, 0px) !important; } }
 
+#root {
+  height: 100%; }
+
 .loading {
   position: absolute;
   left: calc(50% - 35px);
@@ -23628,3 +23727,9 @@ html[dir="rtl"] body .ps__rail-y {
   100% {
     transform: rotate(1turn);
     opacity: 1; } }
+
+/*========================================================
+        DARK LAYOUT
+=========================================================*/
+.sweet-alert p {
+  color: #626262 !important; }
