--- a/index.css
+++ b/index.css
@@ -872,8 +872,11 @@ span.flatpickr-day.selected {
   width: 90%; }
 
 .landing-page {
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
-  height: 100%; }
+  padding-bottom: 1rem; }
   .landing-page .mobile-bg {
     width: 100%;
     max-height: 100%; }
@@ -881,7 +884,9 @@ span.flatpickr-day.selected {
     margin-right: 10rem;
     padding-top: 5rem;
     color: white;
-    min-height: 90vh; }
+    min-height: 90vh;
+    width: 30%;
+    margin-left: auto; }
     .landing-page .ld-main .lg-content-header {
       margin-top: 2rem; }
       .landing-page .ld-main .lg-content-header .tab-control {
@@ -892,7 +897,7 @@ span.flatpickr-day.selected {
   .landing-page .lg-header .languages .active {
     color: #77c64d; }
   .landing-page .lg-content {
-    background: linear-gradient(187.45deg, rgba(0, 0, 0, 0.135216) 5.78%, rgba(17, 57, 52, 0.15) 72.97%);
+    background: linear-gradient(187.45deg, rgba(0, 0, 0, 0.13) 5.78%, rgba(17, 57, 52, 0) 72.97%);
     padding: 6rem; }
     .landing-page .lg-content .text-danger {
       font-size: 0.8rem;
@@ -952,14 +957,28 @@ span.flatpickr-day.selected {
   .unlock-btn {
     margin-top: 1rem; } }
 
+@media (max-width: 1600px) {
+  .landing-page .ld-main {
+    width: 35%; } }
+
+@media (max-width: 1350px) {
+  .landing-page .ld-main {
+    width: 40%; } }
+
+@media (max-width: 1024px) {
+  .landing-page .ld-main {
+    width: 50%; } }
+
 @media (max-width: 768px) {
   .landing-page {
     height: auto; }
     .landing-page .ld-main {
-      margin-right: 5rem;
       padding-top: 1rem;
       color: white;
-      min-height: 85vh; }
+      width: 90%;
+      min-height: 85vh;
+      margin-left: auto;
+      margin-right: auto; }
       .landing-page .ld-main .lg-content-header {
         margin-top: 2rem; }
       .landing-page .ld-main .ld-header img {
@@ -14728,7 +14747,7 @@ html [type="button"],
   background: linear-gradient(180deg, rgba(248, 248, 248, 0.95) 44%, rgba(248, 248, 248, 0.46) 73%, rgba(255, 255, 255, 0));
   padding-top: 2.2rem;
   background-repeat: repeat;
-  width: 85%;
+  width: 100%;
   height: 102px;
   position: fixed;
   top: 0;
@@ -23572,8 +23591,8 @@ html[dir="rtl"] body .ps__rail-y {
 #root {
   height: 100%; }
 
-.ps__rail-y {
-  z-index: 15; }
+.Select__menu-list {
+  max-height: 120px !important; }
 
 .loading {
   position: absolute;
