--- a/index.css
+++ b/index.css
@@ -1008,6 +1008,9 @@ span.flatpickr-day.selected {
   background: #e6e2e2;
   text-align: center; }
 
+.general-info .collapse-title {
+  font-size: 1rem !important; }
+
 .general-info .w-300px {
   width: 300px; }
 
