--- a/index.css
+++ b/index.css
@@ -23706,3 +23706,28 @@ html[dir="rtl"] body .ps__rail-y {
 .Select__placeholder {
   color: #D4D5D6 !important;
   font-size: 0.85rem; }
+
+.otp-input {
+  width: 3rem !important;
+  border-radius: 5px !important;
+  height: 3rem;
+  font-weight: bold; }
+  @media (max-width: 768px) {
+    .otp-input {
+      width: 2rem !important;
+      height: 2rem; } }
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #F5F5F5; }
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+  background-color: #F5F5F5; }
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #aaa; }
