--- a/index.css
+++ b/index.css
@@ -23717,6 +23717,12 @@ html[dir="rtl"] body .ps__rail-y {
       width: 2rem !important;
       height: 2rem; } }
 
+.flatpickr-calendar .flatpickr-time {
+  display: none; }
+
+.flatpickr-calendar.noCalendar .flatpickr-time {
+  display: block; }
+
 ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
