--- a/index.css
+++ b/index.css
@@ -1,3 +1,12 @@
+.completeInfor .text-gray {
+  color: #999999; }
+
+.completeInfor .Select__control {
+  border-radius: 20px;
+  border-radius: 20px;
+  border: 1px solid #51912d;
+  min-height: 30px; }
+
 .flatpickr-calendar {
   background: transparent;
   opacity: 0;
@@ -872,78 +881,80 @@ span.flatpickr-day.selected {
   width: 90%; }
 
 .landing-page {
-  height: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding-bottom: 1rem; }
-  .landing-page .mobile-bg {
+  background-color: white;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  color: #113934; }
+  .landing-page .main-content {
+    padding: 5% 20%;
+    min-height: 100vh;
+    background-color: white; }
+    .landing-page .main-content.wider {
+      padding: 5% 10%; }
+    @media (max-width: 1300px) {
+      .landing-page .main-content {
+        padding: 5% 15%; } }
+    @media (max-width: 768px) {
+      .landing-page .main-content {
+        padding: 5%; } }
+  .landing-page .landing-page-title {
+    font-weight: bold;
+    margin: 5rem 0;
+    text-align: center;
+    color: #106D5A; }
+  .landing-page input {
+    border-radius: 16px; }
+  .landing-page label {
+    color: #106D5A !important;
+    font-weight: bold; }
+  .landing-page .Select__control {
+    border-radius: 16px; }
+  .landing-page .btn-primary {
     width: 100%;
-    max-height: 100%; }
-  .landing-page .ld-main {
-    margin-right: 10rem;
-    padding-top: 5rem;
-    color: white;
-    min-height: 90vh;
-    width: 30%;
-    margin-left: auto; }
-    .landing-page .ld-main .lg-content-header {
-      margin-top: 2rem; }
-      .landing-page .ld-main .lg-content-header .tab-control {
-        padding: 1rem; }
-        .landing-page .ld-main .lg-content-header .tab-control.active {
-          color: #51912d;
-          border-bottom: 3px solid #51912d; }
-  .landing-page .lg-header .languages {
-    padding-top: 20px; }
-    .landing-page .lg-header .languages .active {
-      color: #77c64d; }
+    background: #FF9900 !important;
+    border-radius: 16px;
+    font-weight: bold; }
+  .landing-page .btn-second {
+    width: 100%;
+    background: #FFEBCC !important;
+    color: #FF9900 !important;
+    font-weight: bold;
+    border: 1px solid #FF9900 !important;
+    border-radius: 16px; }
+    .landing-page .btn-second:hover {
+      color: #FF9900 !important;
+      border: 1px solid #FF9900 !important; }
+  .landing-page .lg-content-header {
+    margin-top: 2rem;
+    font-weight: bold;
+    color: #587471; }
+    .landing-page .lg-content-header .tab-control {
+      padding: 1rem;
+      border-bottom: 4px solid #E7EBEB; }
+      .landing-page .lg-content-header .tab-control.active {
+        color: #73C14F;
+        border-bottom: 4px solid #51912d; }
   .landing-page .lg-content {
-    background: linear-gradient(187.45deg, rgba(0, 0, 0, 0.13) 5.78%, rgba(17, 57, 52, 0) 72.97%);
-    padding: 6rem; }
-    .landing-page .lg-content .text-danger {
-      font-size: 0.8rem;
-      margin-top: 0.5rem; }
-    .landing-page .lg-content .form-label-group {
-      margin-bottom: 2rem; }
-      .landing-page .lg-content .form-label-group input:not(:-moz-placeholder-shown) ~ label, .landing-page .lg-content .form-label-group .form-label-group textarea:not(:-moz-placeholder-shown) ~ label {
-        top: -25px; }
-      .landing-page .lg-content .form-label-group input:not(:-ms-input-placeholder) ~ label, .landing-page .lg-content .form-label-group .form-label-group textarea:not(:-ms-input-placeholder) ~ label {
-        top: -25px; }
-      .landing-page .lg-content .form-label-group input:not(:placeholder-shown) ~ label,
-      .landing-page .lg-content .form-label-group .form-label-group textarea:not(:placeholder-shown) ~ label {
-        top: -25px; }
-      .landing-page .lg-content .form-label-group label {
-        color: #77c64d !important; }
-    .landing-page .lg-content input {
-      border-radius: 20px;
-      border: 1px solid #51912d; }
-      .landing-page .lg-content input:focus {
-        box-shadow: 0px 0px 10px 3px rgba(81, 145, 45, 0.85); }
-      .landing-page .lg-content input.is-invalid {
-        border-color: #ea5455;
-        padding-right: calc(1.25em + 1.4rem); }
-    .landing-page .lg-content button {
-      background: linear-gradient(86.55deg, #51912d 18.03%, #0e6856 104.15%);
-      border-radius: 31px; }
-  .landing-page .ld-footer {
-    margin: 0 10rem; }
-  .landing-page .ld-main2 {
-    padding-top: 5rem; }
-    .landing-page .ld-main2 .lg-content-header {
-      margin-top: 5rem; }
-      .landing-page .ld-main2 .lg-content-header .tab-control {
-        padding: 1rem; }
-        .landing-page .ld-main2 .lg-content-header .tab-control.active {
-          color: #51912d;
-          border-bottom: 3px solid #51912d; }
-    .landing-page .ld-main2 .divider {
-      background: #999999; }
-    .landing-page .ld-main2 .lg-content {
-      background: linear-gradient(190.34deg, rgba(255, 255, 255, 0.58) 27%, rgba(255, 255, 255, 0) 135.04%);
-      border-radius: 42px;
-      border: 0.5px solid #88cd63;
-      min-height: 60vh; }
+    display: flex;
+    width: 100%;
+    height: 80%;
+    align-items: center;
+    justify-content: center; }
+  .landing-page .landing-page-bg .logo {
+    top: 3%;
+    position: relative;
+    text-align: center; }
+  .landing-page .landing-page-bg .info-text {
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    bottom: 3%;
+    color: white; }
+    .landing-page .landing-page-bg .info-text p {
+      margin-bottom: 5rem; }
+    .landing-page .landing-page-bg .info-text small {
+      opacity: .5; }
   .landing-page .divider {
     width: 1px;
     height: 20px;
@@ -951,6 +962,12 @@ span.flatpickr-day.selected {
     background: white; }
   .landing-page .text-primary {
     color: #51912d; }
+  .landing-page .text-dark-green {
+    color: #113934; }
+  .landing-page .text-dark-green-2 {
+    color: #587471; }
+  .landing-page .text-secondary {
+    color: #FF9900 !important; }
   .landing-page .form-control.is-invalid.not-show-icon {
     background-image: none; }
 
@@ -958,59 +975,39 @@ span.flatpickr-day.selected {
   min-height: 505px; }
 
 .btn-app-selection {
-  background: #9aa9b7 !important;
-  width: 150px; }
+  background: white !important;
+  border: 1px solid #B8C4C2;
+  color: #587471 !important;
+  text-transform: uppercase;
+  height: 60px;
+  display: flex !important;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold !important; }
   .btn-app-selection.active {
-    background: linear-gradient(86.55deg, #51912d 18.03%, #0e6856 104.15%) !important;
-    color: white !important; }
+    background: #E3F3DC !important;
+    border: 1px solid #73C14F;
+    color: #73C14F !important; }
+  .btn-app-selection:hover {
+    color: #73C14F !important; }
+  .btn-app-selection.left {
+    border-radius: 24px 0 0 24px !important; }
+  .btn-app-selection.right {
+    border-radius: 0 24px 24px 0; }
+  @media (max-width: 768px) {
+    .btn-app-selection {
+      font-size: 0.7rem !important;
+      height: 48px; }
+      .btn-app-selection svg {
+        width: 24px; } }
 
-.social-login {
-  background-color: #e8f0fe !important;
-  border-radius: 5px;
-  padding: 1rem; }
-  .social-login .social-login-btn {
-    color: black;
-    display: flex;
-    align-items: center; }
+.social-login .social-login-btn {
+  color: black;
+  text-align: center; }
 
 @media (max-width: 400px) {
   .unlock-btn {
     margin-top: 1rem; } }
-
-@media (max-width: 1600px) {
-  .landing-page .ld-main {
-    width: 35%; } }
-
-@media (max-width: 1350px) {
-  .landing-page .ld-main {
-    width: 40%; } }
-
-@media (max-width: 1024px) {
-  .landing-page .ld-main {
-    width: 50%; } }
-
-@media (max-width: 768px) {
-  .landing-page {
-    height: auto; }
-    .landing-page .ld-main {
-      padding-top: 1rem;
-      color: white;
-      width: 90%;
-      min-height: 85vh;
-      margin-left: auto;
-      margin-right: auto; }
-      .landing-page .ld-main .lg-content-header {
-        margin-top: 2rem; }
-      .landing-page .ld-main .ld-header img {
-        width: 200px;
-        padding: 2rem; }
-    .landing-page .ld-footer {
-      position: relative;
-      margin: auto;
-      width: 100%; }
-    .landing-page .mobile-icon-blur {
-      position: absolute;
-      bottom: 0; } }
 
 /*** Account Settings ***/
 .general-info .box-content {
@@ -1029,86 +1026,6 @@ span.flatpickr-day.selected {
 
 .general-info .w-300px {
   width: 300px; }
-
-.loading {
-  position: absolute;
-  left: calc(50% - 35px);
-  top: 50%;
-  width: 55px;
-  height: 55px;
-  border-radius: 50%;
-  box-sizing: border-box;
-  border: 3px solid transparent; }
-  .loading.component-loader {
-    margin-top: -60px; }
-  .loading .effect-1,
-  .loading .effect-2 {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    border: 3px solid transparent;
-    border-left: 3px solid #338955;
-    border-radius: 50%;
-    box-sizing: border-box; }
-  .loading .effect-1 {
-    -webkit-animation: rotate 1s ease infinite;
-            animation: rotate 1s ease infinite; }
-  .loading .effect-2 {
-    -webkit-animation: rotateOpacity 1s ease infinite 0.1s;
-            animation: rotateOpacity 1s ease infinite 0.1s; }
-  .loading .effect-3 {
-    width: 100%;
-    height: 100%;
-    border: 3px solid transparent;
-    border-left: 3px solid #338955;
-    -webkit-animation: rotateOpacity 1s ease infinite 0.2s;
-    animation: rotateOpacity 1s ease infinite 0.2s;
-    border-radius: 50%;
-    box-sizing: border-box; }
-  .loading .loading .effects {
-    transition: all 0.3s ease; }
-
-.fallback-logo {
-  position: absolute;
-  left: calc(50% - 80px);
-  top: 40%; }
-
-@-webkit-keyframes rotate {
-  0% {
-    transform: rotate(0deg); }
-  100% {
-    transform: rotate(1turn); } }
-
-@keyframes rotate {
-  0% {
-    transform: rotate(0deg); }
-  100% {
-    transform: rotate(1turn); } }
-
-@-webkit-keyframes rotateOpacity {
-  0% {
-    transform: rotate(0deg);
-    opacity: 0.1; }
-  100% {
-    transform: rotate(1turn);
-    opacity: 1; } }
-
-@keyframes rotateOpacity {
-  0% {
-    transform: rotate(0deg);
-    opacity: 0.1; }
-  100% {
-    transform: rotate(1turn);
-    opacity: 1; } }
-
-.completeInfor .text-gray {
-  color: #999999; }
-
-.completeInfor .Select__control {
-  border-radius: 20px;
-  border-radius: 20px;
-  border: 1px solid #51912d;
-  min-height: 30px; }
 
 /*========================================================
         DARK LAYOUT
@@ -23708,10 +23625,15 @@ html[dir="rtl"] body .ps__rail-y {
   font-size: 0.85rem; }
 
 .otp-input {
-  width: 3rem !important;
-  border-radius: 5px !important;
-  height: 3rem;
-  font-weight: bold; }
+  width: 4rem !important;
+  border-radius: 16px !important;
+  height: 4rem;
+  font-weight: bold;
+  border: 1px solid #B8C4C2;
+  font-size: 3rem; }
+  .otp-input:focus {
+    outline: none !important;
+    background: #E3F3DC; }
   @media (max-width: 768px) {
     .otp-input {
       width: 2rem !important;
@@ -23737,3 +23659,74 @@ html[dir="rtl"] body .ps__rail-y {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: #aaa; }
+
+.loading {
+  position: absolute;
+  left: calc(50% - 35px);
+  top: 50%;
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  box-sizing: border-box;
+  border: 3px solid transparent; }
+  .loading.component-loader {
+    margin-top: -60px; }
+  .loading .effect-1,
+  .loading .effect-2 {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border: 3px solid transparent;
+    border-left: 3px solid #338955;
+    border-radius: 50%;
+    box-sizing: border-box; }
+  .loading .effect-1 {
+    -webkit-animation: rotate 1s ease infinite;
+            animation: rotate 1s ease infinite; }
+  .loading .effect-2 {
+    -webkit-animation: rotateOpacity 1s ease infinite 0.1s;
+            animation: rotateOpacity 1s ease infinite 0.1s; }
+  .loading .effect-3 {
+    width: 100%;
+    height: 100%;
+    border: 3px solid transparent;
+    border-left: 3px solid #338955;
+    -webkit-animation: rotateOpacity 1s ease infinite 0.2s;
+    animation: rotateOpacity 1s ease infinite 0.2s;
+    border-radius: 50%;
+    box-sizing: border-box; }
+  .loading .loading .effects {
+    transition: all 0.3s ease; }
+
+.fallback-logo {
+  position: absolute;
+  left: calc(50% - 80px);
+  top: 40%; }
+
+@-webkit-keyframes rotate {
+  0% {
+    transform: rotate(0deg); }
+  100% {
+    transform: rotate(1turn); } }
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg); }
+  100% {
+    transform: rotate(1turn); } }
+
+@-webkit-keyframes rotateOpacity {
+  0% {
+    transform: rotate(0deg);
+    opacity: 0.1; }
+  100% {
+    transform: rotate(1turn);
+    opacity: 1; } }
+
+@keyframes rotateOpacity {
+  0% {
+    transform: rotate(0deg);
+    opacity: 0.1; }
+  100% {
+    transform: rotate(1turn);
+    opacity: 1; } }
