--- a/index.modern.css
+++ b/index.modern.css
@@ -9341,6 +9341,8 @@ footer .false-cjs {
     width: 4.5rem; }
   footer .false-cjs .false-cjs {
     width: 25%; }
+  footer .false-cjs span {
+    color: #338955; }
 
 footer.false-cjs {
   box-shadow: 0px -1px 4px 0px rgba(0, 0, 0, 0.15); }
