--- a/index.modern.css
+++ b/index.modern.css
@@ -9145,7 +9145,7 @@ html {
     html body p {
       line-height: 1.5rem; }
     html body .false-cjs {
-      background: no-repeat center center;
+      background: no-repeat center center;
       background-size: cover; }
     html body .false-cjs .false-cjs {
       margin-left: 0; }
@@ -23596,6 +23596,9 @@ html[dir="rtl"] body .false-cjs {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: #aaa; }
+
+body {
+  padding: env(safe-area-inset); }
 
 .false-cjs {
   position: absolute;
